--- a/api.cabal
+++ b/api.cabal
@@ -31,6 +31,9 @@ executable api-project
     -- other-extensions:
     build-depends:    
         base ^>=4.14.3.0, 
-        wreq ^>=0.5.3.3
+        wreq ^>=0.5.3.3,
+        aeson ^>=2.1.0.0,
+        text ^>=2.0,
+        lens ^>=5.1.1
     hs-source-dirs:   app
     default-language: Haskell2010
